--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -33,6 +33,13 @@
   text-decoration: none;
 }
 
+.titleContainer {
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
 .title a:hover,
 .title a:focus,
 .title a:active {
