--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,13 +2,14 @@
   padding: 0 2rem;
 }
 
-.title a {
+.title span {
   color: #0070f3;
   text-decoration: none;
 }
 
 .titleContainer {
   display: flex;
+  flex-direction: column;
   min-height: 100vh;
   justify-content: center;
   align-items: center;
@@ -25,4 +26,14 @@
   line-height: 1.15;
   font-size: 4rem;
   text-align: center;
+}
+
+.buttons {
+  button {
+    padding: 25px;
+    margin: 10px;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+  }
 }
