--- a/styles/People.module.scss
+++ b/styles/People.module.scss
@@ -50,3 +50,11 @@
   font-weight: bold;
   text-align: center;
 }
+
+.peopleBackButton {
+  padding: 25px;
+  margin: 10px;
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
+}
