--- a/styles/Analytics.module.scss
+++ b/styles/Analytics.module.scss
@@ -4,3 +4,11 @@
   font-weight: bold;
   text-align: center;
 }
+
+.analyticsBackButton {
+  padding: 25px;
+  margin: 10px;
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
+}
