--- a/styles/Analytics.module.scss
+++ b/styles/Analytics.module.scss
@@ -12,3 +12,14 @@
   font-size: 30px;
   font-weight: bold;
 }
+
+.analytics {
+  background: #d1d1d1;
+}
+
+.sectionTitle {
+  text-align: center;
+  font-size: 35px;
+  font-weight: bold;
+  color: #333;
+}
