--- a/styles/Analytics.module.scss
+++ b/styles/Analytics.module.scss
@@ -1,25 +1,17 @@
-.analyticsTitle {
-  color: #0070f3;
-  font-size: 70px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.analyticsBackButton {
-  padding: 25px;
-  margin: 10px;
-  color: #fff;
-  font-size: 30px;
-  font-weight: bold;
-}
-
 .analytics {
-  background: #d1d1d1;
-}
+  background: #e1dede;
 
-.sectionTitle {
-  text-align: center;
-  font-size: 35px;
-  font-weight: bold;
-  color: #333;
+  .analyticsTitle {
+    color: #0070f3;
+    font-size: 70px;
+    font-weight: bold;
+    text-align: center;
+  }
+  .analyticsBackButton {
+    padding: 25px;
+    margin: 10px;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+  }
 }
