--- a/styles/People.module.scss
+++ b/styles/People.module.scss
@@ -1,60 +1,50 @@
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-@media (max-width: 600px) {
+.people {
   .grid {
-    width: 100%;
-    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 800px;
+    margin: 0 auto;
+
+    @media (max-width: 600px) {
+      width: 100%;
+      flex-direction: column;
+    }
   }
-}
+  .card {
+    margin: 1rem;
+    padding: 1.5rem;
+    text-align: left;
+    color: inherit;
+    text-decoration: none;
+    border: 1px solid #eaeaea;
+    border-radius: 10px;
+    transition: color 0.15s ease, border-color 0.15s ease;
+    max-width: 300px;
 
-.heading {
-  color: #0070f3;
-  font-size: 70px;
-  font-weight: bold;
-  text-align: center;
-}
+    &:hover,
+    &:focus,
+    &:active {
+      color: #0070f3;
+      border-color: #0070f3;
+    }
 
-.peopleBackButton {
-  padding: 25px;
-  margin: 10px;
-  color: #fff;
-  font-size: 30px;
-  font-weight: bold;
+    h2 {
+      margin: 0 0 1rem 0;
+      font-size: 1.5rem;
+    }
+    p {
+      margin: 0;
+      font-size: 1.25rem;
+      line-height: 1.5;
+    }
+  }
+
+  .heading {
+    color: #0070f3;
+    font-size: 70px;
+    font-weight: bold;
+    text-align: center;
+  }
 }
