--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,35 +1,34 @@
-.title span {
-  color: #0070f3;
-  text-decoration: none;
-}
+.homePage {
+  .title {
+    margin: 0;
+    line-height: 1.15;
+    font-size: 4rem;
+    text-align: center;
+    span {
+      color: #0070f3;
+      text-decoration: none;
+    }
+    a:hover,
+    a:focus,
+    a:active {
+      text-decoration: underline;
+    }
+  }
+  .titleContainer {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+  }
 
-.titleContainer {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-  text-align: center;
-}
-
-.buttons {
-  button {
-    padding: 25px;
-    margin: 10px;
-    color: #fff;
-    font-size: 30px;
-    font-weight: bold;
+  .buttons {
+    button {
+      padding: 25px;
+      margin: 10px;
+      color: #fff;
+      font-size: 30px;
+      font-weight: bold;
+    }
   }
 }
