--- a/styles/Pagination.module.scss
+++ b/styles/Pagination.module.scss
@@ -1,13 +1,15 @@
-.item {
-  display: inline;
-  margin-right: 25px;
-  border: 1px solid yellow;
-  color: black;
-  background-color: #0070f3;
-  padding: 4px;
-  cursor: pointer;
-}
+.pagination {
+  .item {
+    display: inline;
+    margin-right: 25px;
+    border: 1px solid yellow;
+    color: black;
+    background-color: #0070f3;
+    padding: 4px;
+    cursor: pointer;
+  }
 
-.container {
-  text-align: center;
+  .container {
+    text-align: center;
+  }
 }
