--- a/styles/PersonPage.module.scss
+++ b/styles/PersonPage.module.scss
@@ -1,92 +1,79 @@
-$success-color: #2ecc71;
-$error-color: #e74c3c;
+@import 'styles/__variables.scss';
 
-.title {
-  color: #0070f3;
-  font-size: 70px;
-  font-weight: bold;
-  text-align: center;
-}
+.personPage {
+  .title {
+    color: #0070f3;
+    font-size: 70px;
+    font-weight: bold;
+    text-align: center;
+  }
+  .container {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    width: 400px;
+    margin: 0 auto;
+  }
+  .form {
+    padding: 15px 40px;
 
-.container {
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-  width: 400px;
-  margin: 0 auto;
-}
+    button {
+      cursor: pointer;
+      background-color: #3498db;
+      border: 2px solid #3498db;
+      border-radius: 4px;
+      color: #fff;
+      display: block;
+      font-size: 16px;
+      padding: 10px;
+      margin-top: 20px;
+      width: 100%;
+    }
+  }
+  .formControl {
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+    position: relative;
 
-.form {
-  padding: 15px 40px;
-}
+    label {
+      color: #777;
+      display: block;
+      margin-bottom: 5px;
+    }
 
-.formControl {
-  margin-bottom: 10px;
-  padding-bottom: 20px;
-  position: relative;
-}
+    input {
+      border: 2px solid #f0f0f0;
+      border-radius: 4px;
+      display: block;
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+    }
 
-.formControl label {
-  color: #777;
-  display: block;
-  margin-bottom: 5px;
-}
+    input:focus {
+      outline: 0;
+      border-color: #777;
+    }
+    small {
+      color: var(--error-color);
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      visibility: hidden;
+    }
+  }
+  .formControl .formControl .formControl .formControl.success input {
+    border-color: var(--success-color);
+  }
+  .formControl.error input {
+    border-color: var(--error-color);
+  }
 
-.formControl input {
-  border: 2px solid #f0f0f0;
-  border-radius: 4px;
-  display: block;
-  width: 100%;
-  padding: 10px;
-  font-size: 14px;
-}
+  .formControl.error small {
+    visibility: visible;
+  }
 
-.formControl input:focus {
-  outline: 0;
-  border-color: #777;
-}
-
-.formControl.success input {
-  border-color: var(--success-color);
-}
-
-.formControl.error input {
-  border-color: var(--error-color);
-}
-
-.formControl small {
-  color: var(--error-color);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  visibility: hidden;
-}
-
-.formControl.error small {
-  visibility: visible;
-}
-
-.form button {
-  cursor: pointer;
-  background-color: #3498db;
-  border: 2px solid #3498db;
-  border-radius: 4px;
-  color: #fff;
-  display: block;
-  font-size: 16px;
-  padding: 10px;
-  margin-top: 20px;
-  width: 100%;
-}
-
-.backToPeopleButton {
-  padding: 25px;
-  margin: 10px;
-  color: #fff;
-  font-size: 30px;
-  font-weight: bold;
-}
-
-.information {
-  text-align: center;
+  .information {
+    text-align: center;
+  }
 }
